vertical align fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,16 +23,27 @@
 * {margin: 0; padding: 0; line-height: 1;}
 body, html {width:100%; height: 100%;}
 .touch {margin-top: 30px; position: relative; }
-.day, .weekPeriod {font-family: 'rbno2.1alight', "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif; text-transform: uppercase;text-align: center;  color: rgb(156,156,156); font-size: 40px;font-size: 10vmin; }
-.week {  display: block;font-family: 'rbno2_1ahairline', "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif, Arial;text-align: center; height: 100%; color: rgb(201,0,35); font-size: 25em;  }
-.linkweek {font-size: 2em; display: block;z-index: 999; top: 50%; width: 50px;
-height: 50px;
-margin-top: -25px;
-background: url("../img/buttons.png") 0 0 no-repeat;}
-.prevweek {position: absolute; left:30px; background-position: 0 -50px;}
-.nextweek {position: absolute; right:30px;}
-.linkweek:hover {background: url("../img/buttons-hover.png") no-repeat;}
-.prevweek:hover {background-position: 0 -50px;}
-.table {
-    margin-top: 35px;
+.day, .weekPeriod {font-family: 'rbno2.1alight', "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif; text-transform: uppercase;text-align: center;  color: rgb(156,156,156); font-size: 40px;font-size: 4em; }
+.week {  display: block;font-family: 'rbno2_1ahairline', "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif, Arial;text-align: center; color: rgb(201,0,35); font-size: 25em;  }
+.scroll {
+    height: 100%;
+}
+
+.scroll-bar.scroll-bar-v {
+    display: none;
+}
+
+.slider {
+    height: 100%;
+}
+
+ion-slide.slider-slide {
+    height: 100%;
+    display: table;
+    vertical-align: middle;
+}
+
+.slide-content{
+    display: table-cell;
+    vertical-align: middle;
 }
